--- a/bibliotheque-front/src/app/page-bibliothecaire/bibliothecaire-emprunts/bibliothecaire-emprunts.component.html
+++ b/bibliotheque-front/src/app/page-bibliothecaire/bibliothecaire-emprunts/bibliothecaire-emprunts.component.html
@@ -29,8 +29,8 @@
                     <td>{{eDetail.nomPrenomInscrit}}</td>
                     <td>{{eDetail. idLivre}}</td>
                     <td>{{eDetail.titreLivre}}</td>
-                    <td>{{eDetail.debutEmprunt}}</td>
-                    <td>{{eDetail.finEmprunt}}</td>
+                    <td>{{eDetail.debutEmprunt | date:'dd/MM/yyyy'}}</td>
+                    <td>{{eDetail.finEmprunt | date:'dd/MM/yyyy'}}</td>
                     <td>{{eDetail.dateRendu==null?'Non':'Oui'}}</td>
 
                     <td><a class="btn btn-secondary"  (click)="Rendrelivre(eDetail.id)"><i
