--- a/bibliotheque-front/src/app/page-bibliothecaire/bibliothecaire-emprunts/bibliothecaire-emprunts.component.html
+++ b/bibliotheque-front/src/app/page-bibliothecaire/bibliothecaire-emprunts/bibliothecaire-emprunts.component.html
@@ -31,7 +31,7 @@
                     <td>{{eDetail.titreLivre}}</td>
                     <td>{{eDetail.debutEmprunt | date:'dd/MM/yyyy'}}</td>
                     <td>{{eDetail.finEmprunt | date:'dd/MM/yyyy'}}</td>
-                    <td>{{eDetail.dateRendu==null?'Non':'Oui'}}</td>
+                    <td>{{eDetail.dateRendu==null?'Non':(eDetail.dateRendu)|date:'dd/MM/yyyy'}}</td>
 
                     <td><a class="btn btn-secondary"  (click)="Rendrelivre(eDetail.id)"><i
                                 class="bi bi-pencil-square"></i></a></td>
