population test & URL Cover fixes

--- a/bibliotheque-front/src/app/page-edition/page-edition.component.html
+++ b/bibliotheque-front/src/app/page-edition/page-edition.component.html
@@ -4,7 +4,7 @@
         <div class="col-lg-4">
             <!-- Couverture -->
             <div class="container w-75" style="max-width:250px">
-                <img [src]="'assets/img/book-covers/' + fetchedEdition.idEdition + '.jpg'" class="w-100" alt="">
+                <img [src]="fetchedEdition.urlCover" class="w-100" alt="">
             </div>
 
             <!-- Boutons de réservation -->
