--- a/bibliotheque-front/src/app/recherche/recherche.component.html
+++ b/bibliotheque-front/src/app/recherche/recherche.component.html
@@ -24,7 +24,7 @@
             <div class="row">
               <dl class="col-sm">
                 <dt>Date de parution</dt>
-                <dd>{{res.publication | date:'dd-MM-yyyy'}}}}</dd>
+                <dd>{{res.publication | date:'yyyy'}}</dd>
               </dl>
               <dl class="col-sm">
                 <dt>Genre</dt>
