last? url cover fix

--- a/bibliotheque-front/src/app/page-exemplaires/page-exemplaires.component.html
+++ b/bibliotheque-front/src/app/page-exemplaires/page-exemplaires.component.html
@@ -5,7 +5,7 @@
       <!-- Column 1 : thumbnail -->
       <div class="col-3 d-flex justify-content-center border-end">
         <img class="h-100 mt-3 mb-3" style="max-height:300px"
-          [src]="'assets/img/book-covers/'+ displayedEdition.idEdition +'.jpg'" alt="">
+          [src]="displayedEdition.urlCover" alt="">
       </div>
 
       <!-- Column 2 : infos -->
