--- a/bibliotheque-front/src/app/navbar/navbar.component.html
+++ b/bibliotheque-front/src/app/navbar/navbar.component.html
@@ -16,9 +16,9 @@
                         routerLinkActive="text-light link-light" [queryParams]="{id:1}">Voir un livre</a></li>
                 <li class="nav-item"><a class="nav-link px-2 text-secondary" [routerLink]="['/livre']"
                         routerLinkActive="text-light link-light" [queryParams]="{id:2}">En voir un autre</a></li>
-                <li class="nav-item"><a class="nav-link px-2 text-secondary" [routerLink]="['/tpt']"
+                <li class="nav-item"><a class="nav-link px-2 text-secondary" [routerLink]="['/faq']"
                         routerLinkActive="text-light link-light">FAQs</a></li>
-                <li class="nav-item"><a class="nav-link px-2 text-secondary" [routerLink]="['/tpt']"
+                <li class="nav-item"><a class="nav-link px-2 text-secondary" [routerLink]="['/about']"
                         routerLinkActive="text-light link-light">About</a></li>
             </ul>
 
