Final-v_final final-pour-de-vrai.finalfinal ?

--- a/bibliotheque-front/src/app/about/about.component.html
+++ b/bibliotheque-front/src/app/about/about.component.html
@@ -1,5 +1,8 @@
-<div class="text-center container">
-<p>Cette application de bibliothèque a été créée dans le contexte d'une formation de reconversion.</p>
-<p>Créateurs: Nabil N.  Charles C.  Nicolas A.  Pierre H.</p>
-<p>Remerciements à AJC, en particulier Jordan, Eric et Jérémy, et à Sopra Steria.</p>
+<div class="container">
+    <div class="row" style="height: 25vh;"></div>
+    <div class="row">
+        <p>Cette application de bibliothèque a été créée dans le contexte d'une formation de reconversion.</p>
+        <p>Créateurs: Nabil N. Charles C. Nicolas A. Pierre H.</p>
+        <p>Remerciements à AJC, en particulier Jordan, Eric et Jérémy, et à Sopra Steria.</p>
+    </div>
 </div>
