--- a/bibliotheque-front/src/app/page-edition/page-edition.component.html
+++ b/bibliotheque-front/src/app/page-edition/page-edition.component.html
@@ -4,7 +4,7 @@
         <div class="col-lg-4">
             <!-- Couverture -->
             <div class="container w-75" style="max-width:250px">
-                <img [src]="fetchedEdition.urlCover" class="w-100" alt="">
+                <img [src]="fetchedEdition.urlCover" class="w-100" [alt]="fetchedEdition.urlCover">
             </div>
 
             <!-- Boutons de réservation -->
