--- a/bibliotheque-front/src/app/home/carte-evenement/carte-evenement.component.html
+++ b/bibliotheque-front/src/app/home/carte-evenement/carte-evenement.component.html
@@ -1,12 +1,12 @@
-<div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative bg-light">
-  <div class="col-7 p-4 d-flex flex-column position-static">
+<div class="h-100 row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative bg-light">
+  <div class="col p-4 d-flex flex-column position-static">
     <strong class="d-inline-block mb-2 text-primary">{{tag}}</strong>
-    <h3 class="mb-0">{{title}}</h3>
+    <h4 class="mb-0">{{title}}</h4>
     <div class="mb-1 text-muted">{{date}}</div>
     <p class="card-text mb-auto">{{content}}</p>
     <a href="#" class="stretched-link">Voir plus.</a>
   </div>
-  <div class="col-5 d-none d-lg-block">
-    <img [src]="thumbnailUrl" style="height: 200px;" alt="">
+  <div class="col d-none d-lg-block" [style]="'background-image: url(' + thumbnailUrl + '); background-size: cover;'">
+    <!-- <img [src]="thumbnailUrl" style="height: 200px;" alt=""> -->
   </div>
 </div>
