--- a/bibliotheque-front/src/app/home/home.component.html
+++ b/bibliotheque-front/src/app/home/home.component.html
@@ -13,16 +13,18 @@
   </div>
 </div>
 
-<div class="container my-5">
+<div class="container my-3">
   <!-- 2eme partie : évènements -->
-  <div class="container">
+  <div class="container mb-3">
     <h2 class="text-sans"><b>Prochains évènements</b></h2>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
 
-      <div class="col" *ngFor="let i of [].constructor(3)">
-        <app-carte-evenement [tag]="'TAG'" [title]="'TITRE'" [content]="'CONTENT'" [date]="'DATE'"
-          [thumbnailUrl]="'../../../assets/img/news/1.png'"></app-carte-evenement>
-      </div>
+      <app-carte-evenement [tag]="'Book signing'" [title]="'Jordan Innou'" [content]="'L\'ornithologie moderne'" [date]="'DATE'"
+      [thumbnailUrl]="'http://www.ajc-ingenierie.fr/img/equipes/Jordan.jpg'"></app-carte-evenement>
+      <app-carte-evenement [tag]="'Conférence'" [title]="'Eric S.'" [content]="'De développement informatique à portée de tous'" [date]="'DATE'"
+      [thumbnailUrl]="'http://www.ajc-ingenierie.fr/img/equipes/equipe-12.jpg'"></app-carte-evenement>
+      <app-carte-evenement [tag]="'Conférence'" [title]="'Armand K.'" [content]="'Posture et communication assertives'" [date]="'DATE'"
+      [thumbnailUrl]="'http://www.ajc-ingenierie.fr/img/equipes/equipe-1.jpg'"></app-carte-evenement>
 
     </div>
   </div>
@@ -33,8 +35,10 @@
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
 
       <!-- Carte TODO Customiser !-->
-      <app-carte-collection lien="/recherche" [lienQueryParams]="{search: 'John Milton'}" urlImg="https://upload.wikimedia.org/wikipedia/commons/9/9f/John_Milton.jpg" lienQueryParams="{id:2}"></app-carte-collection>
-
+      <app-carte-collection lien="/livre" [lienQueryParams]="{id: '3'}" urlImg="https://upload.wikimedia.org/wikipedia/commons/9/9f/John_Milton.jpg" [titre]="'John Milton : la poésie romantique'"></app-carte-collection>
+      <app-carte-collection lien="/recherche" [lienQueryParams]="{search: 'Nul'}" urlImg="https://www.lemediaplus.com/wp-content/uploads/2016/02/PourLesNuls.jpg" [titre]="'Les nuls : développez vos compétences'"></app-carte-collection>
+      <app-carte-collection lien="/livre" [lienQueryParams]="{id: '2'}" urlImg="https://media.senscritique.com/media/000020174950/source_big/Dune.jpg" [titre]="'Dune : la SF mythique'"></app-carte-collection>
+      <app-carte-collection lien="/recherche" [lienQueryParams]="{search: 'Damasio'}" urlImg="https://upload.wikimedia.org/wikipedia/commons/d/d1/Alain_Damasio%2C_2019_%28cropped%29.JPG" [titre]="'La fiction de Damasio'"></app-carte-collection>
     </div>
   </div>
 </div>
