--- a/bibliotheque-front/src/app/page-exemplaires/page-exemplaires.component.html
+++ b/bibliotheque-front/src/app/page-exemplaires/page-exemplaires.component.html
@@ -30,7 +30,7 @@
                 <td>{{ex.nomEditeur}}</td>
                 <td>{{ex.emprunted? ex.dateProchaineDispo : 'Oui'}}</td>
                 <td>
-                  <button *ngIf="ex.emprunted" class="btn btn-light btn-outline-secondary">Réserver</button>
+                  <button class="btn btn-light btn-outline-secondary">Réserver</button>
                 </td>
               </tr>
             </tbody>
