--- a/bibliotheque-front/src/app/recherche/recherche.component.html
+++ b/bibliotheque-front/src/app/recherche/recherche.component.html
@@ -31,7 +31,7 @@
                 <dd>{{res.genres}}</dd>
               </dl>
               <dl class="col-sm">
-                <dt>Nombre d'exemplaires</dt>
+                <dt>Exemplaires Disponibles</dt>
                 <dd>{{res.nombreLivresDispo}}</dd>
               </dl>
             </div>
