--- a/bibliotheque-front/src/app/footer/footer.component.html
+++ b/bibliotheque-front/src/app/footer/footer.component.html
@@ -2,10 +2,9 @@
     <div class="container">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Accueil</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Plan</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-white" [routerLink]="['/acces']">Informations Pratiques</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-white">About</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-white"[routerLink]="['/faq']">FAQs</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-white"[routerLink]="['/about']">About</a></li>
     </ul>
     <p class="text-center text-white">
         © 2022 TPT Inc
