--- a/bibliotheque-front/src/app/page-bibliothecaire/ajout-emprunt/ajout-emprunt.component.html
+++ b/bibliotheque-front/src/app/page-bibliothecaire/ajout-emprunt/ajout-emprunt.component.html
@@ -19,6 +19,11 @@
             <input class="form-control" id="debut" type="date" [(ngModel)]="formEmprunt.debut" />
         </div>
 
+        <div class="row mb-3">
+            <label class="form-label"  for="fin">Date de fin d'emprunt</label>
+            <input class="form-control" id="fin" type="date" [(ngModel)]="formEmprunt.fin" />
+        </div>
+
         <div class="row">
             <div class="col text-center">
                 <button class="btn btn-danger btn-md me-3" type="submit" (click)="cancel_emprunt()">Reset</button>
