--- a/bibliotheque-front/src/app/page-lecteur/page-lecteur.component.html
+++ b/bibliotheque-front/src/app/page-lecteur/page-lecteur.component.html
@@ -1,11 +1,11 @@
 <div class="container py-3">
-    <div class="mt-3 mb-3">
+    <!-- <div class="mt-3 mb-3">
         <button type="button" class="btn btn-dark btn-md" type="submit" value="">Rechercher un Emprunt</button>
-    </div>
+    </div> 
 
 
 
-    <hr>
+    <hr> -->
 
     <div class="card mt-3">
         <div class="card-header bg-dark text-white display-6">Mes emprunts</div>
@@ -18,7 +18,6 @@
                         <th>Date d'emprunt</th>
                         <th>Date de retour</th>
                         <th>Rendu</th>
-                        <th></th>
                     </tr>
                 </thead>
 
@@ -26,8 +25,8 @@
                     <tr *ngFor="let emp of list()">
                         <td>{{emp.idExemplaire}}</td>
                         <td>{{emp.titreLivre}}</td>
-                        <td>{{emp.debut| date:'dd-MM-yyyy'}}}}</td>
-                        <td>{{emp.fin| date:'dd-MM-yyyy'}}}}</td>
+                        <td>{{emp.debut | date:'dd/MM/yyyy'}}</td>
+                        <td>{{emp.fin | date:'dd/MM/yyyy'}}</td>
                         <td>{{(emp.dateRendu==null)? 'Non' : 'Oui'}}</td>
                     </tr>
                 </tbody>
