--- a/bibliotheque-front/src/app/footer/footer.component.html
+++ b/bibliotheque-front/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
         <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Accueil</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-white" [routerLink]="['/acces']">Informations Pratiques</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-white"[routerLink]="['/faq']">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-white"[routerLink]="['/about']">About</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-white"[routerLink]="['/about']">À Propos</a></li>
     </ul>
     <p class="text-center text-white">
         © 2022 TPT Inc
