--- a/bibliotheque-front/src/app/home/home.component.html
+++ b/bibliotheque-front/src/app/home/home.component.html
@@ -19,11 +19,11 @@
     <h2 class="text-sans"><b>Prochains évènements</b></h2>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
 
-      <app-carte-evenement [tag]="'Book signing'" [title]="'Jordan Innou'" [content]="'L\'ornithologie moderne'" [date]="'DATE'"
+      <app-carte-evenement [tag]="'Book signing'" [title]="'Jordan Innou'" [content]="'L\'ornithologie moderne'" [date]="'20/01/2023'"
       [thumbnailUrl]="'http://www.ajc-ingenierie.fr/img/equipes/Jordan.jpg'"></app-carte-evenement>
-      <app-carte-evenement [tag]="'Conférence'" [title]="'Eric S.'" [content]="'De développement informatique à portée de tous'" [date]="'DATE'"
+      <app-carte-evenement [tag]="'Conférence'" [title]="'Eric S.'" [content]="'Le développement informatique à portée de tous'" [date]="'31/01/2023'"
       [thumbnailUrl]="'http://www.ajc-ingenierie.fr/img/equipes/equipe-12.jpg'"></app-carte-evenement>
-      <app-carte-evenement [tag]="'Conférence'" [title]="'Armand K.'" [content]="'Posture et communication assertives'" [date]="'DATE'"
+      <app-carte-evenement [tag]="'Conférence'" [title]="'Armand K.'" [content]="'Posture et communication assertives'" [date]="'02/02/2023'"
       [thumbnailUrl]="'http://www.ajc-ingenierie.fr/img/equipes/equipe-1.jpg'"></app-carte-evenement>
 
     </div>
