--- a/bibliotheque-front/src/app/navbar/navbar.component.html
+++ b/bibliotheque-front/src/app/navbar/navbar.component.html
@@ -19,7 +19,7 @@
                 <li class="nav-item"><a class="nav-link px-2 text-secondary" [routerLink]="['/faq']"
                         routerLinkActive="text-light link-light">FAQs</a></li>
                 <li class="nav-item"><a class="nav-link px-2 text-secondary" [routerLink]="['/about']"
-                        routerLinkActive="text-light link-light">About</a></li>
+                        routerLinkActive="text-light link-light">À Propos</a></li>
             </ul>
 
             <!-- Barre recherche -->
